welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:4: error: value =! is not a member of Int
  if (die1==die2 && noDoubles && x=!12){
                                  ^